Fixed some alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ region.wavesurfer-region[data-region-highlight] {
 }
 
 footer {
-    position: fixed;
+    position: absolute;
     bottom: 0;
     height: 30px;
     text-align: center;
